# lzma_c_for_python

./: .gitignore  MANIFEST.in  build.bat  build.sh  pyproject.toml  setup.py  test.py
.github/workflows/: python-publish.yml
src/lzma_c/: __init__.py  _lzmamodule.c
