[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lzma_c"
version = "1.0.1"
authors = [
  { name="alex", email="469370972@qq.com" },
]
description = "A fast LZMA compression library based on 7-Zip's C code"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["src"]





