[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lzma_c"
# 1. 移除静态版本号
# version = "1.0.1" 
# 2. 声明版本是动态的
dynamic = ["version"]
authors = [
  { name="alex", email="469370972@qq.com" },
]
description = "A fast LZMA compression library based on 7-Zip's C code"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["src"]

# 3. 告诉 setuptools 从哪里找到动态版本
[tool.setuptools.dynamic]
version = {attr = "lzma_c.__version__"}



